guestbook/guestbook-ui-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: redis-ingress
  namespace: guestbook
spec:
  rules:
  - host: guestbook.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-ui
            port: 
              number: 80
status:
  loadBalancer:
    ingress:
    - {}
